# android-cmake-only

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/toolchain/: android.cmake
src/java/: AndroidManifest.xml  CMakeLists.txt  main.cpp
src/java/java/: exampleJavaActivity.java
src/no_java/: AndroidManifest.xml  CMakeLists.txt  main.c
src/sdl2/: AndroidManifest.xml  CMakeLists.txt  main.c
src/sdl2/kotlin/: exampleKotlinActivity.kt
